--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-light bg-light">
       <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">OK</button>
+        <button><a class="btn btn-outline-success my-2 my-sm-0" type="submit" href="IR">IR</a> </button>
       </form>
     </nav>
 </nav>
